--- a/index.html
+++ b/index.html
@@ -28,7 +28,17 @@ antes de servirlo. En invierno, intenta servirlo caliente."
 
 <h2>Ingredientes</h2>
   <p>1 frasco de 8 oz. de tomates secos al sol</p>
+  <p>2 dientes de ajo grandes</p>
+  <p>2/3 taza de aceitunas kalamata</p>
+  <p>1 cucharadita de alcaparras</p>
+  <h3>Instrucciones</h3>
+  <p>Combina los tomates y el ajo en un procesador de alimentos. Mezcla hasta que esté lo más suave posible.
 
+Agrega alcaparras y aceitunas. Pulsa el motor unas pocas veces hasta que estén incorporados, pero aún conserven algo
+
+de textura.
+
+Sirve en tostadas finas con queso de cabra y guarnición de albahaca fresca (opcional).</p>
 </body>
 
 </html>
