--- a/index.html
+++ b/index.html
@@ -1,44 +1,34 @@
 <!DOCTYPE html>
-
 <html lang="es">
-
-<head>  
-
-<meta charset="UTF-8">
-
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-<title>Marcando una receta</title>
-
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Receta de Tapenade (Untable de Aceitunas)</title>
 </head>
-
 <body>
 
-<h1>Tapenade (Untable de Aceitunas)
-</h1>
+    <h1>Tapenade (Untable de Aceitunas)</h1>
 
-<p>Este es un plato realmente sencillo de preparar y siempre es un gran éxito en las fiestas. Mi padre recomienda:
+    <p>Este es un plato realmente sencillo de preparar y siempre es un gran éxito en las fiestas. Mi padre recomienda:</p>
 
-"Haz esto la noche anterior para que los sabores tengan tiempo de mezclarse. Solo tráelo a temperatura ambiente
+    <blockquote>
+        "Haz esto la noche anterior para que los sabores tengan tiempo de mezclarse. Solo tráelo a temperatura ambiente antes de servirlo. En invierno, intenta servirlo caliente."
+    </blockquote>
 
-antes de servirlo. En invierno, intenta servirlo caliente."
-</p>
+    <h2>Ingredientes</h2>
+    <ul>
+        <li>1 frasco de 8 oz. de tomates secos al sol</li>
+        <li>2 dientes de ajo grandes</li>
+        <li>2/3 taza de aceitunas kalamata</li>
+        <li>1 cucharadita de alcaparras</li>
+    </ul>
 
-<p>Espero que sea de su agrado aunque sea sencilla.</p>
+    <h2>Instrucciones</h2>
+    <ol>
+        <li>Combina los tomates y el ajo en un procesador de alimentos. Mezcla hasta que esté lo más suave posible.</li>
+        <li>Agrega alcaparras y aceitunas. Pulsa el motor unas pocas veces hasta que estén incorporados, pero aún conserven algo de textura.</li>
+        <li>Sirve en tostadas finas con queso de cabra y guarnición de albahaca fresca (opcional).</li>
+    </ol>
 
-<h2>Ingredientes</h2>
-  <p>1 frasco de 8 oz. de tomates secos al sol</p>
-  <p>2 dientes de ajo grandes</p>
-  <p>2/3 taza de aceitunas kalamata</p>
-  <p>1 cucharadita de alcaparras</p>
-  <h3>Instrucciones</h3>
-  <p>Combina los tomates y el ajo en un procesador de alimentos. Mezcla hasta que esté lo más suave posible.
-
-Agrega alcaparras y aceitunas. Pulsa el motor unas pocas veces hasta que estén incorporados, pero aún conserven algo
-
-de textura.
-
-Sirve en tostadas finas con queso de cabra y guarnición de albahaca fresca (opcional).</p>
 </body>
-
 </html>
